--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0px;
 }
 
-.fbc {
+.holder {
     background-color: aquamarine;
     display: flex;
     margin-top: 10vh;
@@ -17,7 +17,7 @@ body {
     align-content: center;
 }
 
-.fbc div {
+.holder div {
     background-color: black;
     height: 150px;
     width: 300px;
